# duckdb_driver

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yaml  pythonapp.yaml  release-please.yml
duckdb_driver/: __init__.py  datatypes.py
duckdb_driver/tests/: conftest.py  test_basic.py  test_datatypes.py  test_ducklake.py
