[project]
name = "duckdb_driver"
version = "0.17.0"
description = "SQLAlchemy driver for duckdb"
authors = [{ name = "Nathan Clerkx", email = "nathan@wolk.work" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "duckdb>=1.4.0",
    "sqlalchemy>=1.3.22",
    "packaging>=21",
]
license-files = ["LICENSE.txt"]

[project.urls]
"Bug Tracker" = "https://github.com/wolkwork/duckdb_driver/issues"
Changelog = "https://github.com/wolkwork/duckdb_driver/releases"
repository = "https://github.com/wolkwork/duckdb_driver"

[project.entry-points."sqlalchemy.dialects"]
duckdb = "duckdb_driver:Dialect"

[dependency-groups]
dev = [
    "numpy<2",
    "pyarrow",
    "pytest>=8.0.0,<9",
    "mypy>=1.4,<2",
    "hypothesis>=6.75.2,<7",
    "pandas>=1,<2",
    "jupysql>=0.11.1,<0.12",
    "sqlalchemy[mypy]>=1.3.19,<2",
    "pytest-cov>=5.0.0,<6",
    "pytest-remotedata>=0.4.0,<0.5",
    "pytest-snapshot>=0.9.0,<1",
    "toml>=0.10.2,<0.11",
    "fsspec>=2025.2.0,<2026",
    "nox-uv>=0.7.0",
]
devtools = [
    "pdbpp>=0.11.0,<0.12",
    "pre-commit>=4.0.0,<5 ; python_version >= '3.9'",
]
nox = [
    "github-action-utils>=1.1.0",
    "nox>=2025.11.12",
]

[tool.uv]
default-groups = [
    "dev",
    "devtools",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "duckdb_driver"
module-root = ""

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --strict --strict-markers"
xfail_strict = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ['sqlalchemy.ext.mypy.plugin']

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ['E203', 'E501']
